// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scene → STL pipeline > 2d/circle > matches the captured geometry summary 1`] = `
{
  "nodes": 1,
  "polygons": 1,
  "stlBytes": 0,
  "vertices": 48,
}
`;

exports[`scene → STL pipeline > 2d/rounded-rect > matches the captured geometry summary 1`] = `
{
  "nodes": 2,
  "polygons": 1,
  "stlBytes": 0,
  "vertices": 20,
}
`;

exports[`scene → STL pipeline > 2d/spline-gasket > matches the captured geometry summary 1`] = `
{
  "nodes": 13,
  "polygons": 6,
  "stlBytes": 0,
  "vertices": 252,
}
`;

exports[`scene → STL pipeline > 2d/spline-star > matches the captured geometry summary 1`] = `
{
  "nodes": 1,
  "polygons": 1,
  "stlBytes": 0,
  "vertices": 96,
}
`;

exports[`scene → STL pipeline > 2d/transforms-2d > matches the captured geometry summary 1`] = `
{
  "nodes": 4,
  "polygons": 1,
  "stlBytes": 0,
  "vertices": 28,
}
`;

exports[`scene → STL pipeline > booleans/box-int-cylinder > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      8,
      10,
      8,
    ],
    "min": [
      -8,
      -10,
      -8,
    ],
  },
  "nodes": 4,
  "stlBytes": 9484,
  "triangles": 188,
  "vertices": 96,
}
`;

exports[`scene → STL pipeline > booleans/box-minus-sphere > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      15,
      15,
      15,
    ],
    "min": [
      -15,
      -15,
      -15,
    ],
  },
  "nodes": 3,
  "stlBytes": 51684,
  "triangles": 1032,
  "vertices": 508,
}
`;

exports[`scene → STL pipeline > booleans/union-stack > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      10,
      10,
      15,
    ],
    "min": [
      -10,
      -10,
      -5,
    ],
  },
  "nodes": 4,
  "stlBytes": 1484,
  "triangles": 28,
  "vertices": 16,
}
`;

exports[`scene → STL pipeline > composite/cored-block > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      18,
      10,
      10,
    ],
    "min": [
      -10,
      -10,
      -10,
    ],
  },
  "nodes": 6,
  "stlBytes": 44984,
  "triangles": 898,
  "vertices": 449,
}
`;

exports[`scene → STL pipeline > composite/diagonal-section > matches the captured geometry summary 1`] = `
{
  "nodes": 2,
  "polygons": 1,
  "stlBytes": 0,
  "vertices": 8,
}
`;

exports[`scene → STL pipeline > composite/extruded-gear > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      12,
      10,
      5,
    ],
    "min": [
      -10,
      -10,
      0,
    ],
  },
  "nodes": 4,
  "stlBytes": 10184,
  "triangles": 202,
  "vertices": 105,
}
`;

exports[`scene → STL pipeline > composite/hull-tetrahedral-spheres > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      13,
      13,
      13,
    ],
    "min": [
      -13,
      -13,
      -13,
    ],
  },
  "nodes": 9,
  "stlBytes": 19584,
  "triangles": 390,
  "vertices": 197,
}
`;

exports[`scene → STL pipeline > composite/lua-2d-flower > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      10,
      8.66,
      3,
    ],
    "min": [
      -10,
      -8.66,
      0,
    ],
  },
  "nodes": 2,
  "stlBytes": 3484,
  "triangles": 68,
  "vertices": 36,
}
`;

exports[`scene → STL pipeline > composite/refined-sphere > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      10,
      10,
      10,
    ],
    "min": [
      -10,
      -10,
      -10,
    ],
  },
  "nodes": 2,
  "stlBytes": 14484,
  "triangles": 288,
  "vertices": 146,
}
`;

exports[`scene → STL pipeline > composite/revolved-vase > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      5,
      0,
      5,
    ],
    "min": [
      -5,
      -20,
      -5,
    ],
  },
  "nodes": 2,
  "stlBytes": 32084,
  "triangles": 640,
  "vertices": 322,
}
`;

exports[`scene → STL pipeline > composite/section-then-extrude > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      5,
      5,
      2,
    ],
    "min": [
      -5,
      -5,
      0,
    ],
  },
  "nodes": 5,
  "stlBytes": 12084,
  "triangles": 240,
  "vertices": 120,
}
`;

exports[`scene → STL pipeline > edge-cases/interior-void > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      10,
      10,
      10,
    ],
    "min": [
      -10,
      -10,
      -10,
    ],
  },
  "nodes": 3,
  "stlBytes": 26284,
  "triangles": 524,
  "vertices": 266,
}
`;

exports[`scene → STL pipeline > edge-cases/shared-face-cubes > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      15,
      5,
      5,
    ],
    "min": [
      -5,
      -5,
      -5,
    ],
  },
  "nodes": 4,
  "stlBytes": 1084,
  "triangles": 20,
  "vertices": 12,
}
`;

exports[`scene → STL pipeline > edge-cases/tangent-sphere-box > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      20,
      10,
      10,
    ],
    "min": [
      -10,
      -10,
      -10,
    ],
  },
  "nodes": 4,
  "stlBytes": 26284,
  "triangles": 524,
  "vertices": 266,
}
`;

exports[`scene → STL pipeline > lua/lua-gear > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      5.5,
      5.5,
      0.5,
    ],
    "min": [
      -5.5,
      -5.5,
      -0.5,
    ],
  },
  "nodes": 1,
  "stlBytes": 49684,
  "triangles": 992,
  "vertices": 512,
}
`;

exports[`scene → STL pipeline > lua/lua-with-input > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      6.5,
      0.5,
      0.5,
    ],
    "min": [
      -0.5,
      -0.5,
      -0.5,
    ],
  },
  "nodes": 1,
  "stlBytes": 1884,
  "triangles": 36,
  "vertices": 24,
}
`;

exports[`scene → STL pipeline > primitives/box > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      10,
      10,
      10,
    ],
    "min": [
      -10,
      -10,
      -10,
    ],
  },
  "nodes": 1,
  "stlBytes": 684,
  "triangles": 12,
  "vertices": 8,
}
`;

exports[`scene → STL pipeline > primitives/cylinder > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      8,
      8,
      15,
    ],
    "min": [
      -8,
      -8,
      -15,
    ],
  },
  "nodes": 1,
  "stlBytes": 12684,
  "triangles": 252,
  "vertices": 128,
}
`;

exports[`scene → STL pipeline > primitives/sphere > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      10,
      10,
      10,
    ],
    "min": [
      -10,
      -10,
      -10,
    ],
  },
  "nodes": 1,
  "stlBytes": 57684,
  "triangles": 1152,
  "vertices": 578,
}
`;

exports[`scene → STL pipeline > transforms/rotated-cylinder > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      6,
      15,
      6,
    ],
    "min": [
      -6,
      -15,
      -6,
    ],
  },
  "nodes": 2,
  "stlBytes": 12684,
  "triangles": 252,
  "vertices": 128,
}
`;

exports[`scene → STL pipeline > transforms/translated-box > matches the captured geometry summary 1`] = `
{
  "bbox": {
    "max": [
      20,
      5,
      5,
    ],
    "min": [
      10,
      -5,
      -5,
    ],
  },
  "nodes": 2,
  "stlBytes": 684,
  "triangles": 12,
  "vertices": 8,
}
`;
